--- a/style.css
+++ b/style.css
@@ -6,3 +6,26 @@
   box-sizing: border-box;
   font-family: 'Inconsolata', monospace;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #111;
+}
+
+.scan {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.scan .fingerprint {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background: url(fingerPrint_01.png);
+  background-size: 300px;
+}
