--- a/style.css
+++ b/style.css
@@ -29,3 +29,14 @@ body {
   background: url(fingerPrint_01.png);
   background-size: 300px;
 }
+
+.scan .fingerprint::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(fingerPrint_02.png);
+  background-size: 300px;
+}
