--- a/style.css
+++ b/style.css
@@ -39,4 +39,14 @@ body {
   height: 100%;
   background: url(fingerPrint_02.png);
   background-size: 300px;
+  animation: animate 4s ease-in-out infinite;
+}
+@keyframes animate {
+  0%,
+  100% {
+    height: 0%;
+  }
+  50% {
+    height: 100%;
+  }
 }
