--- a/style.css
+++ b/style.css
@@ -50,3 +50,15 @@ body {
     height: 100%;
   }
 }
+
+.scan .fingerprint::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8px;
+  background: #3fefef;
+  border-radius: 8px;
+  filter: drop-shadow(0 0 20px #3fefef) drop-shadow(0 0 60px #3fefef);
+}
