Style second animation and keyframes

--- a/style.css
+++ b/style.css
@@ -61,4 +61,14 @@ body {
   background: #3fefef;
   border-radius: 8px;
   filter: drop-shadow(0 0 20px #3fefef) drop-shadow(0 0 60px #3fefef);
+  animation: animate-line 4s ease-in-out infinite;
+}
+@keyframes animate-line {
+  0%,
+  100% {
+    top: 0%;
+  }
+  50% {
+    top: 100%;
+  }
 }
