--- a/style.css
+++ b/style.css
@@ -72,3 +72,12 @@ body {
     top: 100%;
   }
 }
+
+.scan h2 {
+  text-transform: uppercase;
+  font-size: 2em;
+  letter-spacing: 2px;
+  margin-top: 20px;
+  color: #3fefef;
+  filter: drop-shadow(0 0 20px #3fefef) drop-shadow(0 0 60px #3fefef);
+}
